# routines

./: .gitignore
clang/finder/: CMakeLists.txt  finder.cc
cpp/: copy_swap.cc  crtp.cc  difftime.cc  index_sequence.cc  long_opt.cc
jni/include/: myjni_TestJNICallBackMethod.h  myjni_TestJNICallBackMethodBase.h  myjni_TestJNIConstructor.h  myjni_TestJNIObjectArray.h  myjni_TestJNIPrimitive.h  myjni_TestJNIPrimitiveArray.h  myjni_TestJNIReference.h  myjni_TestJNIStaticVariable.h  myjni_TestJNIString.h
jni/myjni/: HelloJNI.java  TestJNICallBackMethod.java  TestJNICallBackMethodBase.java  TestJNICallBackMethodDerived.java  TestJNIConstructor.java  TestJNIInstanceVariable.java  TestJNIObjectArray.java  TestJNIPrimitive.java  TestJNIPrimitiveArray.java  TestJNIReference.java  TestJNIStaticVariable.java  TestJNIString.java
jni/src/: HelloJNI.cc  TestJNICallBackMethod.c  TestJNICallBackMethodBase.c  TestJNIConstructor.c  TestJNIInstanceVariable.c  TestJNIObjectArray.c  TestJNIPrimitive.c  TestJNIPrimitiveArray.c  TestJNIReference.c  TestJNIStaticVariable.c  TestJNIString.c
linux/kernel/block-dev-drivers/: Makefile  ramhd_mkreq.c  ramsd_req.c
linux/kernel/char-dev-drivers/: sort
linux/kernel/char-dev-drivers/dev_led/: led.c  led_sysfs.c
linux/kernel/fasync/: Makefile  fasync.c  main  main.c
linux/kernel/kobject/: Makefile  hotplug  hotplug.c  kobj.c
linux/kernel/kprobe/: Makefile  jprobe_exp.c
linux/kernel/mmap/: Makefile  dev_mmap.c  main  main.c
linux/kernel/timer/: dev_scull.c  main  main.c
linux/shell/: tar_package.sh
(+7 files in other folders)
